--- a/css/styles.css
+++ b/css/styles.css
@@ -349,9 +349,9 @@ span {
         font-size: 1.5rem;
         font-weight: 700;
         background-color: #f1f1f1;
-        margin-right: 96px;
-        position: relative;
-        left: 120px;
+        margin-right: 25px;
+        margin-left: -40px;
+        padding: 15px;
         line-height: 1.8rem;
         text-align: right;
         float: left;
@@ -362,8 +362,8 @@ span {
     .intro-paragraph {
         width: 45%;
         float: left;
-        margin-right: 20px;
-        margin-left: 40px;
+        margin-right: 10px;
+        margin-left: 10px;
         margin-bottom: 50px;
         margin-top: -50px;
         line-height: 2.5;
@@ -446,10 +446,10 @@ span {
         padding-left: 120px;
     }
     .full {
-        margin-right: 30px;
         text-align: right;
-        position: relative;
-        left: 360px;
+        margin-right: 15px;
+        margin-left: -15px;
+        padding: 10px; 
     }
   
 
